[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsewatch"
version = "0.1.0"
description = "Self-hosted uptime & status-page tool: scheduled health checks, incident tracking, and Discord alerting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["uptime", "monitoring", "status-page", "fastapi", "incidents"]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "apscheduler==3.10.4",
    "httpx==0.27.2",
    "pyyaml==6.0.2",
    "jinja2==3.1.4",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
pulsewatch = "pulsewatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pulsewatch = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pulsewatch"]
branch = true

[tool.coverage.report]
show_missing = true
# The dashboard-serving route and __main__ guards have no meaningful branches
# to unit test; exclude the usual non-testable lines from the report.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
